syntax = "proto3";


package com.adrmanagement.team.infrastructure.grpcservice;

option java_multiple_files = true;

service TeamMemberGetService {

  rpc get(TeamMemberGetRequest) returns (TeamMemberGetResponse);

}

message TeamMemberGetRequest {
  int64 teamId = 1;
}

message TeamMemberGetResponse {
  repeated TeamMember teamMemberList = 1;
}

message TeamMember {
  int64 memberId = 1;
  int64 name = 2;
}
